--- a/ProvaSuite/report.html
+++ b/ProvaSuite/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[0,0,124996],[],[[1,0,0,[4],[0,184,124810,5],[]]],[],[1,0,1,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,151325],[],[[1,0,0,[4],[1,158,151167],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginLunga","*C:\\Users\\nincanti\\IdeaProjects\\provaRobotFrameworkMobile\\ProvaSuite\\LoginLunga.robot","*LoginLunga.robot","*GET","*User keyword 'Popup Manager' contains no keywords."]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginLunga","*C:\\Users\\nincanti\\IdeaProjects\\provaRobotFrameworkMobile\\ProvaSuite\\LoginLunga.robot","*LoginLunga.robot","*GET"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:02:05","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:02:05","fail":1,"label":"GET","pass":0,"skip":0}],[{"elapsed":"00:02:05","fail":1,"id":"s1","label":"LoginLunga","name":"LoginLunga","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:02:31","fail":0,"label":"All Tests","pass":1,"skip":0}],[{"elapsed":"00:02:31","fail":0,"label":"GET","pass":1,"skip":0}],[{"elapsed":"00:02:31","fail":0,"id":"s1","label":"LoginLunga","name":"LoginLunga","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1680619271752;
+window.output["baseMillis"] = 1680705294475;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 125005;
+window.output["generated"] = 151355;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
